fixed an issue causing dropdown to be un readable due to bottom tabbar

--- a/css/index.css
+++ b/css/index.css
@@ -415,6 +415,10 @@ accordion-dropdown h5 i {
   border-bottom-right-radius:0px;
 }
 
+#variablesAndInfo {
+  margin-bottom: 42px;
+}
+
 #variablesAndInfo * {
   height: max-content !important;
 }
